# Ps3-emulator-

./: CHANGES_SUMMARY.txt  EMULATOR_FIXES.md  README.md  gradle.properties  settings.gradle.kts
.github/workflows/: main.yml
RetroRTS/: gradlew  settings.gradle.kts
RetroRTS/app/: build.gradle.kts  proguard-rules.pro
RetroRTS/app/src/androidTest/java/com/retrorts/: MainActivityEspressoTest.kt
RetroRTS/app/src/main/: AndroidManifest.xml
RetroRTS/app/src/main/cpp/: CMakeLists.txt  SDL.h  SDL_opengl.h  amiga_core.cpp  amiga_core.h  amiga_uae_bridge_jni.cpp  config.h  dosbox_audio.cpp  dosbox_audio.h  dosbox_bridge_jni.cpp  dosbox_jni.cpp  dsi_core.cpp  dsi_core.h  emulator_core.cpp  emulator_core.h  gpu_android.cpp  gpu_android.h  native-lib.cpp  pcsx_android_stubs.c  pcsx_jni_entry.cpp  ps1_core.cpp  ps1_core.h  revision.h  sdl_stub.cpp  surface_jni.cpp
RetroRTS/app/src/main/java/com/retrorts/: GameLibrary.kt  MainActivity.kt
RetroRTS/app/src/main/java/com/retrorts/ui/: AmigaBridge.kt  DosboxBridge.kt  GamePathValidator.kt  GameProfile.kt  NativeEmulatorBridge.kt  PerfStats.kt
RetroRTS/app/src/main/res/drawable/: ic_launcher_foreground.xml
RetroRTS/app/src/main/res/layout/: activity_main.xml
RetroRTS/app/src/main/res/values/: strings.xml  themes.xml
RetroRTS/app/src/test/java/com/retrorts/: BridgeAndValidationTest.kt  GameProfileStoreTest.kt  SaveStateIoTest.kt
app/src/main/java/com/example/ps3emu/: MainActivity.kt
app/src/main/java/com/example/ps3emu/core/: EmulatorCore.kt  MockPs3Core.kt  NativePs3Core.kt
app/src/main/java/com/example/ps3emu/ui/: EmulatorScreen.kt  VirtualGamepad.kt
app/src/main/java/com/example/ps3emu/viewmodel/: EmulatorViewModel.kt
